<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_sides"
    android:layout_centerHorizontal="true"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/id"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:padding="@dimen/padding_sides_little"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/id_item" />

    <TextView
        android:id="@+id/timeStamp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:padding="@dimen/padding_sides_little"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/time_stamp_item" />

    <TextView
        android:id="@+id/instrumentName"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:padding="@dimen/padding_sides_little"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/instrument_name_item" />

    <TextView
        android:id="@+id/price"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:padding="@dimen/padding_sides_little"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/price_item" />

    <TextView
        android:id="@+id/amount"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:padding="@dimen/padding_sides_little"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/amount" />

    <TextView
        android:id="@+id/side"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:padding="@dimen/padding_sides_little"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/side_item" />

</LinearLayout>